fixed spacing issues in grid

--- a/sass/helpers/_grid.scss
+++ b/sass/helpers/_grid.scss
@@ -1,9 +1,10 @@
+@import 'helpers/variables';
 .inner-grid {
 	width: 90%;
 	max-width: 1168px;
 	margin: 0 auto;
 }
-#pg-12-0, #pg-12-1, #pg-12-2 {
+[id*=pg-12] {
 	margin-bottom: 45px !important;
 }
 .textwidget {
@@ -12,5 +13,30 @@
 	}
 	.button {
 		margin-top: 25px;
+	}
+}
+.widget_siteorigin-panels-postloop {
+	width: 90%;
+	max-width: 1168px;
+	margin: 0 auto;
+	@include clearfix();
+	.home-post {
+		padding-left: 15px;
+		padding-right: 15px;
+		box-sizing: border-box;
+		width: 33.3333%;
+		float: left;
+		.wp-post-image {
+			margin-bottom: 37px;
+		}
+		.title {
+			font-weight: 500;
+			font-size: 24px;
+			line-height: 28px;
+			color: $grey;
+			font-weight: 700;
+			margin-bottom: 26px;
+			display: inline-block;
+		}
 	}
 }
