--- a/style.scss
+++ b/style.scss
@@ -26,6 +26,9 @@ p {
 		margin-bottom: 0;
 	}
 }
+ul {
+	margin-bottom: 0;
+}
 .shop-item {
 	width: 90%;
 	max-width: 769px;
